# xeno-ros2

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
src/xeno_control/: CMakeLists.txt  README_JOINT_API.md  package.xml  xeno_control.xml
src/xeno_control/bringup/: bringup.launch.py  keyboard_control.gui.launch.py  moveit_control.gui.launch.py  moveit_control.launch.py
src/xeno_control/cmake/: findOneMotor.cmake
src/xeno_control/config/: keyboard_controllers.yaml
src/xeno_control/description/launch/: view_xeno.launch.py
src/xeno_control/description/ros2_control/: xeno.ros2_control.xacro
src/xeno_control/description/urdf/: xeno.urdf.xacro
src/xeno_control/include/xeno_control/: xeno_hardware_interface.hpp
src/xeno_control/include/xeno_control/joints/: Arm.hpp  CanDriverManager.hpp  Lift.hpp  Shift.hpp  Stretch.hpp  Suck.hpp
src/xeno_control/src/: xeno_hardware_interface.cpp
src/xeno_control/src/joints/: Arm.cpp  CanDriverManager.cpp  Lift.cpp  Shift.cpp  Stretch.cpp  Suck.cpp
src/xeno_control_guard/: CMakeLists.txt  README.md  package.xml
src/xeno_control_guard/launch/: xeno_control_guard.launch.py  xeno_control_guard_with_control.launch.py
src/xeno_control_guard/src/: xeno_control_guard_node.cpp
src/xeno_keyboard/: package.xml  setup.cfg  setup.py
src/xeno_keyboard/xeno_keyboard/: xeno_keyboard_node.py
src/xeno_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/xeno_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  xeno_urdf.ros2_control.xacro  xeno_urdf.srdf  xeno_urdf.urdf.xacro
src/xeno_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/xeno_simple_move/: CMakeLists.txt  package.xml
src/xeno_simple_move/src/: xeno_simple_move.cpp
src/xeno_urdf/: CMakeLists.txt  package.xml
src/xeno_urdf/r6bot/meshes/: link1.STL  link4.STL
src/xeno_urdf/r6bot/urdf/: r6bot_description.urdf.xacro
src/xeno_urdf/xeno_urdf/meshes/: link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
src/xeno_urdf/xeno_urdf/rviz/: view_robot.rviz
src/xeno_urdf/xeno_urdf/urdf/: xeno_urdf_description.urdf.xacro
